--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ a:hover {
     <div class="container">
       <h2>¡Descarga nuestro innovador programa!</h2>
       <p>¡Transforma tu experiencia tecnológica!</p>
-      <a href="C:\Users\Administrador\Desktop\Aplicacion/Inventech.zip" class="button" download="Inventech.zip">Descargar ahora</a>
+      <a href="C:\Users\Administrador\Desktop\Aplicacion/prueba.txt" class="button" download="prueba.txt">Descargar ahora</a>
     </div>
   </section>
 
